trying to make more things work, broke it

--- a/src/Makefile
+++ b/src/Makefile
@@ -8,15 +8,18 @@ TARGET = snakem
 all: $(TARGET)
 
 $(TARGET): movement.o menu.o snake.o  main.c 
-	$(CC) -g $(CFLAGS) -l $(LIBRARIES) movement.o menu.o snake.o -o ../$(TARGET) main.c
+	$(CC) -g $(CFLAGS) -l $(LIBRARIES) player.o movement.o menu.o snake.o -o ../$(TARGET) main.c
 
 movement.o: movement.c 
 	$(CC) -c movement.c 
 
-manu.o:  menu.c movement.o
+player.o:  player.c menu.o 
+	$(CC) -c player.c 
+
+menu.o:  menu.c movement.o
 	$(CC) -c menu.c 
 
-snake.o:  snake.c menu.o movement.o debug.h
+snake.o:  snake.c menu.o movement.o debug.h player.o
 	$(CC) -c snake.c 
 
 # install: $(TARGET)
@@ -26,5 +29,5 @@ snake.o:  snake.c menu.o movement.o debug.h
 # 	rm /opt/$(TARGET)
 
 clean: 
-	rm ../$(TARGET) movement.o menu.o snake.o
+	rm ../$(TARGET) movement.o menu.o snake.o player.o
 
