multiplayer kinda works...

--- a/src/Makefile
+++ b/src/Makefile
@@ -8,22 +8,25 @@ TARGET = snakem
 all: $(TARGET)
 
 $(TARGET): movement.o menu.o snake.o  main.c 
-	$(CC) $(CFLAGS) -l $(LIBRARIES) logging.o player.o movement.o menu.o snake.o -o ../$(TARGET) main.c
+	$(CC) $(CFLAGS) -l $(LIBRARIES) server.o logging.o player.o movement.o menu.o snake.o -o ../$(TARGET) main.c
 
 movement.o: movement.c 
-	$(CC) $(CFALGS) -c movement.c 
+	$(CC) $(CFLAGS) -c movement.c 
 
 logging.o: logging.c 
-	$(CC) $(CFALGS) -c logging.c 
+	$(CC) $(CFLAGS) -c logging.c 
 
-player.o:  player.c logging.o 
+player.o:  player.c logging.o server.o
 	$(CC) $(CFLAGS) -c player.c 
 
+server.o:  server.h server.c logging.o 
+	$(CC) $(CFLAGS) -c server.c
+
 menu.o:  menu.c movement.o player.o
-	$(CC) $(CFALGS) -c menu.c 
+	$(CC) $(CFLAGS) -c menu.c 
 
 snake.o:  snake.c snake.h menu.o movement.o  player.o logging.o
-	$(CC) $(CFALGS) -c snake.c 
+	$(CC) $(CFLAGS) -c snake.c 
 
 # install: $(TARGET)
 # 	install -o root -g root -m 755 $(TARGET) /opt/$(TARGET)
@@ -32,5 +35,5 @@ snake.o:  snake.c snake.h menu.o movement.o  player.o logging.o
 # 	rm /opt/$(TARGET)
 
 clean: 
-	rm ../$(TARGET) movement.o menu.o snake.o player.o logging.o
+	rm ../$(TARGET) server.o movement.o menu.o snake.o player.o logging.o
 
