Fixed hanging sockets by adding a read() timeout

--- a/default.conf
+++ b/default.conf
@@ -12,7 +12,7 @@ max_x					 80
 # server flags for mods, separated by commas
 # flags         random
 
-# high score value
+# my high score, can you beat it?
 high_score    2650
 
 # how much to decrease the wait between frames when a pellet is consumed by a
@@ -25,12 +25,12 @@ t_inc         1000
 
 # tells if debug messages should be in the log (yes/no)
 # comment out for default
-debug yes
+debug no
 
 # files to print at start of game, and for bots you kicked.  Comment out  to
 # not have a banner
-start_banner  ansi_screens/start_phone
-bot_warn      ansi_screens/bot_warn_cosgrov
+start_banner  ./ansi_screens/start_phone
+bot_warn      ./ansi_screens/bot_warn_cosgrov
 
 # most players allowed at a time
 max_players   5
