telnet are you there implemented and parse lists.
Players who have not done anything for a while will be asked if they are still
there using the telnet protocol, if they don't respond appropriately they are
kicked.

Config file can have a list of things in it, currently only works for the bad
usernames.  This should work better also, the list should be created in an
order.

--- a/default.conf
+++ b/default.conf
@@ -27,6 +27,15 @@ t_inc         1000
 # comment out for default
 debug no
 
+#add mods to the game to make it more silly, it is a bitwise or of the following flags:
+#    ANON_MODE        4
+#    TRASH_MODE       8
+#    RANDOM_MODES    16
+#    S_INVISIBO      32 
+# this is stupid, flags may change because of defines inside of
+# src/data_types.h.  Hopefully I will implement a better parsing method soon
+game_mods 32
+
 # files to print at start of game, and for bots you kicked.  Comment out  to
 # not have a banner
 start_banner  ./ansi_screens/start_phone
@@ -38,8 +47,21 @@ max_players   5
 # name of player with high score
 hs_name    Jesup
 
+# list of names to consider as bots.  The list ends when the first character is
+# not a space or a tab
+list bad_names
+  888888
+  nobody
+  admin
+  guest
+  support
+  ubnt
+  root
+  sa
+  sh
 
 # spectator username and password, comment them out to make them empty
 # spectators can modify the game as it is played, but nothing dangerous (I hope)
 spec_name  spec
 spec_pass  spec
+
