--- a/src/Makefile
+++ b/src/Makefile
@@ -3,13 +3,12 @@ CC = gcc
 # CFLAGS = -Wall
 CFLAGS = -Wall -g3 -rdynamic
 
-LIBRARIES = -lpthread
 TARGET = snakem
 
 all: $(TARGET)
 
 $(TARGET): parse_config.o movement.o menu.o snake.o  main.c 
-	$(CC) $(CFLAGS) $(LIBRARIES) parse_config.o server.o logging.o player.o movement.o menu.o snake.o -o ../$(TARGET) main.c
+	$(CC) $(CFLAGS) -pthread parse_config.o server.o logging.o player.o movement.o menu.o snake.o -o ../$(TARGET) main.c
 
 movement.o: movement.c 
 	$(CC) $(CFLAGS) -c movement.c 
@@ -30,7 +29,7 @@ parse_config.o:  parse_config.c data_types.h
 	$(CC) $(CFLAGS) -c parse_config.c 
 
 snake.o:  snake.c snake.h menu.o movement.o  player.o logging.o
-	$(CC) $(CFLAGS) -c snake.c 
+	$(CC) $(CFLAGS) -pthread -c snake.c 
 
 # install: $(TARGET)
 # 	install -o root -g root -m 755 $(TARGET) /opt/$(TARGET)
