Fixed parsing bugs and drooping permissions
You can now designate a user in the config file to run the server as.

--- a/default.conf
+++ b/default.conf
@@ -4,6 +4,9 @@
 # port to listen on
 port						4444
 
+# user to run the server as
+user nobody
+
 # max number of characters for height and width
 # need at least max_x
 max_y					 40
@@ -25,7 +28,7 @@ t_inc         1000
 
 # tells if debug messages should be in the log (yes/no)
 # comment out for default
-debug no
+debug yes
 
 #add mods to the game to make it more silly, it is a bitwise or of the following flags:
 #    ANON_MODE        4
